--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;700&display=swap');
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -10,7 +11,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
+  background: rgb(15, 15, 15);
+  font-family: 'Poppins', sans-serif;
+  letter-spacing: 1px;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -594,4 +597,39 @@ pre tt:after {
   html {
     font-size: 100%;
   }
+}
+p {
+  margin: 0;
+  padding: 0;
+  font-size: .875rem;
+}
+.height-100 {
+  height: 100%;
+}
+.d-flex {
+  display: flex;
+}
+.flex-direction-col {
+  flex-direction: column;
+}
+.justify-content-center {
+  justify-content: center;
+}
+.justify-content-space-between {
+  justify-content: space-between;
+}
+.justify-content-flex-end {
+  justify-content: flex-end;
+}
+.justify-content-flex-start {
+  justify-content: flex-start;
+}
+.align-items-center {
+  align-items: center;
+}
+.color-red {
+  color: #990000;
+}
+.bg-red {
+  background-color: #990000;
 }
