--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -11,7 +11,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: hsla(0, 0%, 0%, 0.8);
-  background: rgb(15, 15, 15);
+  /* color: rgb(243, 243, 243); */
+  background: #fff;
   font-family: 'Poppins', sans-serif;
   letter-spacing: 1px;
   font-weight: normal;
