--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -12,7 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: hsla(0, 0%, 0%, 0.8);
   /* color: rgb(243, 243, 243); */
-  background: #fff;
+  background: black;
   font-family: 'Poppins', sans-serif;
   letter-spacing: 1px;
   font-weight: normal;
